@@ -1,5 +1,7 @@
 sventon change history
 -----------------------------------------------------------------------------------------
+[1673] Fixed: Bug #17345 - 'Show Log' starts from HEAD instead of from current revision.
+
 [1671] Release 2.1.6 (2010-07-05)
 [1667] Added: Feature #5033 - Allow setting of MAX_CLAUSE_COUNT.
 [1665] Added: Feature #4464 - Add a base URL config parameter.
